--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
 	  <div class="fright">
 	  <form name="form1" id="form1" action="" method="post">
 	  <input type="text" name="k" class="txt">
-	    <a href="" class="searchbtn" onclick="form1.submit();">搜索</a>| <a href="">EN</a>
+	   <a href="" class="searchbtn" onclick="form1.submit();">搜索</a>| <a class="se_english" href="">EN</a>
 	  </form></div>
 	  <div class="clear"></div>
 	</div>
@@ -82,24 +82,24 @@
 </ul>
     <!--About 关于朴上-->
     <div class="guanyu">
-    <h4>About  关于朴上</h4>
+    <h3>About  关于朴上</h3>
     <div class="guanyu_xu"></div>
       <div class="about">
       <!--简介-->
        <div class="jianjie">
-          <h3 class="jian_h">简介／Introduction</h3>
+          <h4 class="jian_h">简介／Introduction</h4>
           <p class="jian_p">朴上品牌设计工作室2015年成立于深圳。朴上主要以品牌形象定位市场，在日益激烈的社会市场竞争中，品牌尤为变得重要
              和起着决定性关系；市场犹如战场，一个品牌的好坏决定着企业的生死存亡，朴上抓住和渗透市场的发展，从市场中吸取营养和了解，从一个图形演变成企业的文化，上企业在发展竞争中处于不败之地。
           </p>
        </div>
        <!--朴上精神-->
        <div class="pushang">
-           <h3 class="pu_h">朴上精神／Spirit</h3>
+           <h4 class="pu_h">朴上精神／Spirit</h4>
            <p class="pu_p">坚持100%原创设计，为每一位客户做最好的设计！</p>
        </div>
        <!--服务-->
        <div class="fuwu">
-           <h3 class="fu_h">服务／Service</h3>
+           <h4 class="fu_h">服务／Service</h4>
            <div class="fu_div">
            <p class="fu_p">品牌视觉识别系统建立</p>
            </div>
@@ -123,7 +123,7 @@
        </div>
        <!--合作-->
        <div class="hezuo">
-           <h3 class="he_h">合作客户／Cooperative Client</h3>
+           <h4 class="he_h">合作客户／Cooperative Client</h4>
            <div class="he_div">
            <p class="he_p">深圳市东方博瑞电子外贸有限公司</p>
            </div>
@@ -147,7 +147,7 @@
     <!--联系我们-->
     <div class="footer">
     <div class="lianxi">
-    <h4>Contact  联系我们</h4>
+    <h3>Contact  联系我们</h3>
     <div class="lian_xu"></div>
     <ul class="lian">
     	<li>手机：13713785732</li>
