--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="description" content="朴上品牌设计网站" />
-	<title>首页</title>
+	<title>朴上品牌设计－首页</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/jquery.bxslider.css">
   <link rel="stylesheet" href="css/share.css">
@@ -87,7 +87,7 @@
 
     <!--精选案例-->
     <div class="jingxuan">
-    <h4>Successful  精选案例</h4>
+    <h3>Successful  精选案例</h3>
     <div class="jing_xu"></div>
     <ul class="jing">
     	<li class="con-two"><a href="work_05.html"><img src="img/img_01.png" alt="">
@@ -143,7 +143,7 @@
     <div class="clear"></div>
     <!--海报欣赏-->
     <div class="haibao">
-    <h4>Poster  海报欣赏</h4>
+    <h3>Poster  海报欣赏</h3>
     <div class="hai_xu"></div>
     <ul class="hai">
     	<li class="con-two"><a href=""><img src="img/p_01.png" alt="">
@@ -199,7 +199,7 @@
     <div class="clear"></div>
     <!--联系我们-->
     <div class="lianxi">
-    <h4>Contact  联系我们</h4>
+    <h3>Contact  联系我们</h3>
     <div class="lian_xu"></div>
     <ul class="lian">
     	<li>手机：13713785732</li>
