--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   </div>
      <!--菜单导航条-->
     <ul class="nav">
-        <li class="li1 len1"><a href="News.html" t1="News" t2="新闻">News</a></li>
-        <li class="li1 len1"><a href="About.html" t1="About" t2="关于">About</a></li>
-        <li class="li1 arrbox arrbox2 len2"><a href="index.html" t1="Works" t2="案例">Works</a>
+        <li class="li1 len1 nav_li_01"><a href="News.html" t1="News" t2="新闻">News</a></li>
+        <li class="li1 len1 nav_li_02"><a href="About.html" t1="About" t2="关于">About</a></li>
+        <li class="li1 arrbox arrbox2 len2 nav_li_03"><a href="index.html" t1="Works" t2="案例">Works</a>
         <div class="san"></div>
         <table cellspacing="0" cellpadding="0" class="subnav" border="0">
       <tbody><tr>
@@ -73,10 +73,10 @@
     </tbody></table>
 
         </li>
-        <li class="li1 len1"><a href="Partnership.html" t1="Partnership" t2="合作">Partnership</a></li>
-        <li class="li1 len1"><a href="Contact.html" t1="Contact" t2="联系">Contact</a></li>
-        <li class="li1 len1"><a href="Member.html" t1="Members" t2="成员">Members</a></li>
-        <li class="li1 len1"><a href="Recruitment.html" t1="Recruitment" t2="招聘">Recruitment</a></li>
+        <li class="li1 len1 nav_li_04"><a href="Partnership.html" t1="Partnership" t2="合作">Partnership</a></li>
+        <li class="li1 len1 nav_li_05"><a href="Contact.html" t1="Contact" t2="联系">Contact</a></li>
+        <li class="li1 len1 nav_li_06"><a href="Member.html" t1="Members" t2="成员">Members</a></li>
+        <li class="li1 len1 nav_li_07"><a href="Recruitment.html" t1="Recruitment" t2="招聘">Recruitment</a></li>
     </ul>
     <!--轮播图-->
     <ul class="bxslider">
@@ -92,50 +92,50 @@
     <ul class="jing">
     	<li class="con-two"><a href="work_05.html"><img src="img/img_01.png" alt="">
         <div class="txt-two">
-          <h3>品牌标示</h3>
-          <p>东方博瑞外贸有限公司</p>
+          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p2">东方博瑞外贸有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_15.html"><img src="img/img_02.png" alt="">
          <div class="txt-two">
-          <h3>品牌标示</h3>
-          <p>粘木宝乳胶科技有限公司</p>
+          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p2">粘木宝乳胶科技有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_14.html"><img src="img/img_03.png" alt="">
          <div class="txt-two">
-          <h3>品牌标示</h3>
-          <p>山西吕梁红色记忆电商有限公司</p>
+          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p2">山西吕梁红色记忆电商有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_14.html"><img src="img/img_04.png" alt="">
         <div class="txt-two">
-          <h3>画册设计</h3>
-          <p>河北华美化工建材有限公司</p>
+          <p class="txt-two_p1">画册设计</p>
+          <p class="txt-two_p2">河北华美化工建材有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_10.html"><img src="img/img_05.png" alt="">
           <div class="txt-two">
-          <h3>画册设计</h3>
-          <p>河北兰奥诺斯特环境工程有限公司</p>
+          <p class="txt-two_p1">画册设计</p>
+          <p class="txt-two_p2">河北兰奥诺斯特环境工程有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_01.html"><img src="img/img_06.png" alt="">
           <div class="txt-two">
-          <h3>品牌标志</h3>
-          <p>深圳兰谷跨境电商有限公司</p>
+          <p class="txt-two_p1">品牌标志</p>
+          <p class="txt-two_p2">深圳兰谷跨境电商有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_16.html"><img src="img/img_07.png" alt="">
           <div class="txt-two">
-          <h3>品牌标志</h3>
-          <p>深圳兰谷跨境电商有限公司</p>
+          <p class="txt-two_p1">品牌标志</p>
+          <p class="txt-two_p2">深圳兰谷跨境电商有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_08.html"><img src="img/img_08.png" alt="">
         <div class="txt-two">
-          <h3>品牌标志</h3>
-          <p>深圳兰谷跨境电商有限公司</p>
+          <p class="txt-two_p1">品牌标志</p>
+          <p class="txt-two_p2">深圳兰谷跨境电商有限公司</p>
         </div>
       </a></li>
     </ul>
@@ -148,20 +148,20 @@
     <ul class="hai">
     	<li class="con-two"><a href=""><img src="img/p_01.png" alt="">
          <div class="txt-two">
-          <h3>插画设计</h3>
-          <p>非攻</p>
+          <p class="txt-two_p1">插画设计</p>
+          <p class="txt-two_p2">非攻</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_02.png" alt="">
           <div class="txt-two">
-          <h3>海报设计</h3>
-          <p>螺旋纹</p>
+          <p class="txt-two_p1">海报设计</p>
+          <p class="txt-two_p2">螺旋纹</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_03.png" alt="">
          <div class="txt-two">
-          <h3>海报设计</h3>
-          <p>瓷记，陶瓶</p>
+          <p class="txt-two_p1">海报设计</p>
+          <p class="txt-two_p2">瓷记，陶瓶</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_04.png" alt="">
@@ -172,26 +172,26 @@
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_05.png" alt="">
          <div class="txt-two">
-          <h3>海报设计</h3>
-          <p>水利万物，道法自然</p>
+          <p class="txt-two_p1">海报设计</p>
+          <p class="txt-two_p2">水利万物，道法自然</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_06.png" alt="">
          <div class="txt-two">
-          <h3>插画设计</h3>
-          <p>節葬</p>
+          <p class="txt-two_p1">插画设计</p>
+          <p class="txt-two_p2">節葬</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_07.png" alt="">
           <div class="txt-two">
-          <h3>插画设计</h3>
-          <p>明鬼</p>
+          <p class="txt-two_p1">插画设计</p>
+          <p class="txt-two_p2">明鬼</p>
         </div>
       </a></li>
     	<li class="con-two"><a href=""><img src="img/p_08.png" alt="">
         <div class="txt-two">
-          <h3>海报设计</h3>
-          <p>泥像，火车</p>
+          <p class="txt-two_p1">海报设计</p>
+          <p class="txt-two_p2">泥像，火车</p>
         </div>
       </a></li>
     </ul>
@@ -203,13 +203,13 @@
     <div class="lian_xu"></div>
     <ul class="lian">
     	<li>手机：13713785732</li>
-    	<li>QQ：1528590535</li>
-    	<li>weixin：1528590535</li>
+    	<li>QQ:1528590535</li>
+    	<li>weixin:1528590535</li>
     	<li>邮箱：1528590535@qq.com</li>
     	<li class="lian_li5">liyufengdesign@foxmail.com</li>
     	<li>地址：广东省深圳市龙岗区六合路6号多龙玩具厂</li>
     	<li>邮编：518115</li>
-    	<li>add：Shenzhen city Longgang District Road No. 6 dragon toys apartment</li>
+    	<li>ADD:Shenzhen city Longgang District Road No. 6 dragon toys apartment</li>
     	<li></li>
     </ul>
     <div class="ban_xu"></div>
