--- a/Partnership.html
+++ b/Partnership.html
@@ -38,7 +38,7 @@
   </div>
      <!--菜单导航条-->
     <ul class="nav">
-        <li class="li1 len1 nav_li_01"><a href="News.html" t1="News" t2="新闻">News</a></li>
+        <li class="li1 len1 nav_li_01"><a href="News.html" t1="News" t2="动态">News</a></li>
         <li class="li1 len1 nav_li_02"><a href="About.html" t1="About" t2="关于">About</a></li>
         <li class="li1 arrbox arrbox2 len2 nav_li_03"><a href="index.html" t1="Works" t2="案例">Works</a>
         <div class="san"></div>
