--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		$(document).ready(function(){
 		  $('.bxslider').bxSlider({
         auto: true, 
+        autoControls: true
       });
 		});
 	</script>
