--- a/Packing.html
+++ b/Packing.html
@@ -17,7 +17,8 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 		   $('.bxslider').bxSlider({
-        auto: true, 
+        auto: true,
+        autoControls: true, 
       });
 		});
 	</script>
