--- a/Posters.html
+++ b/Posters.html
@@ -18,6 +18,7 @@
 		$(document).ready(function(){
 		   $('.bxslider').bxSlider({
         auto: true, 
+        autoControls: true,
       });
 		});
 	</script>
