--- a/About.html
+++ b/About.html
@@ -13,7 +13,8 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 		  $('.bxslider').bxSlider({
-        auto: true, 
+       auto: true, 
+       autoControls: true,
       });
 		});
 	</script>
