--- a/Member.html
+++ b/Member.html
@@ -14,6 +14,7 @@
         $(document).ready(function(){
            $('.bxslider').bxSlider({
         auto: true, 
+        autoControls: true,
       });
         });
     </script>
