--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <li class="li1 len1 nav_li_06"><a href="Member.html" t1="Members" t2="成员">Members</a></li>
         <li class="li1 len1 nav_li_07"><a href="Recruitment.html" t1="Recruitment" t2="招聘">Recruitment</a></li>
     </ul>
-    <!--轮播图-->
+    <!--大轮播图-->
     <ul class="bxslider">
     <li><img src="img/banner01.png" /></li>
     <li><img src="img/banner01.png" /></li>
@@ -92,20 +92,22 @@
     <div class="jing_xu"></div>
     <ul class="jing">
     	<li class="con-two"><a href="work_05.html"><img src="img/img_01.png" alt="">
+ 
         <div class="txt-two">
-          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p1">品牌标志</p>
           <p class="txt-two_p2">东方博瑞外贸有限公司</p>
         </div>
+
       </a></li>
     	<li class="con-two"><a href="work_15.html"><img src="img/img_02.png" alt="">
          <div class="txt-two">
-          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p1">品牌标志</p>
           <p class="txt-two_p2">粘木宝乳胶科技有限公司</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_14.html"><img src="img/img_03.png" alt="">
          <div class="txt-two">
-          <p class="txt-two_p1">品牌标示</p>
+          <p class="txt-two_p1">品牌标志</p>
           <p class="txt-two_p2">山西吕梁红色记忆电商有限公司</p>
         </div>
       </a></li>
@@ -167,8 +169,8 @@
       </a></li>
     	<li class="con-two"><a href="work_02.html"><img src="img/p_04.png" alt="">
          <div class="txt-two">
-          <h3>海报设计</h3>
-          <p>瓷，China</p>
+          <p class="txt-two_p1">海报设计</p>
+          <p class="txt-two_p2">瓷，China</p>
         </div>
       </a></li>
     	<li class="con-two"><a href="work_12.html"><img src="img/p_05.png" alt="">
