--- a/Member.html
+++ b/Member.html
@@ -5,6 +5,7 @@
     <title>Member成员</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/share.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/jquery.bxslider.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
@@ -84,7 +85,7 @@
 </ul>
     <!--成员-->
     <div class="chengyuan">
-    <h3>Members  成员</h3>
+    <h2>Members  成员<h2>
     <div class="cheng_xu"></div>
     <div class="cheng">
     <!--资深品牌设计师-->
